// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<table
  className="data boxed-padding zebra"
>
  <ComponentsHeader
    baseComponent={
      Object {
        "branch": "develop",
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
    canBePinned={true}
    metrics={
      Array [
        "coverage",
      ]
    }
    rootComponent={
      Object {
        "branch": "develop",
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
  />
  <tbody>
    <withScrollTo(Component)
      canBePinned={true}
      component={
        Object {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      hasBaseComponent={false}
      key="foo"
      metrics={
        Array [
          Object {
            "id": "1",
            "key": "coverage",
            "name": "Coverage",
            "type": "PERCENT",
          },
        ]
      }
      rootComponent={
        Object {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      >
        <hr
          className="null-spacer-top"
        />
      </td>
      <td
        colSpan={5}
      >
        <hr
          className="null-spacer-top"
        />
      </td>
    </tr>
    <withScrollTo(Component)
      canBePinned={true}
      canBrowse={true}
      component={
        Object {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      hasBaseComponent={true}
      key="foo/develop"
      metrics={
        Array [
          Object {
            "id": "1",
            "key": "coverage",
            "name": "Coverage",
            "type": "PERCENT",
          },
        ]
      }
      rootComponent={
        Object {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      />
      <td
        colSpan={5}
      />
    </tr>
  </tbody>
</table>
`;

exports[`renders correctly for a search 1`] = `
<table
  className="data boxed-padding zebra"
>
  <tbody>
    <withScrollTo(Component)
      canBrowse={true}
      component={
        Object {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      hasBaseComponent={false}
      key="foo/develop"
      metrics={Array []}
      rootComponent={
        Object {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      />
      <td
        colSpan={4}
      />
    </tr>
  </tbody>
</table>
`;

exports[`renders correctly for leak 1`] = `
<table
  className="data boxed-padding zebra"
>
  <ComponentsHeader
    baseComponent={
      Object {
        "branch": "develop",
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
    canBePinned={true}
    metrics={
      Array [
        "coverage",
      ]
    }
    rootComponent={
      Object {
        "branch": "develop",
        "key": "foo",
        "name": "Foo",
        "qualifier": "TRK",
      }
    }
  />
  <tbody>
    <withScrollTo(Component)
      branchLike={
        Object {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "feature",
        }
      }
      canBePinned={true}
      component={
        Object {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      hasBaseComponent={false}
      key="foo"
      metrics={
        Array [
          Object {
            "id": "1",
            "key": "coverage",
            "name": "Coverage",
            "type": "PERCENT",
          },
        ]
      }
      rootComponent={
        Object {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      >
        <hr
          className="null-spacer-top"
        />
      </td>
      <td
        colSpan={5}
      >
        <hr
          className="null-spacer-top"
        />
      </td>
    </tr>
    <withScrollTo(Component)
      branchLike={
        Object {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": false,
          "name": "feature",
        }
      }
      canBePinned={true}
      canBrowse={true}
      component={
        Object {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
      hasBaseComponent={true}
      key="foo/develop"
      metrics={
        Array [
          Object {
            "id": "1",
            "key": "coverage",
            "name": "Coverage",
            "type": "PERCENT",
          },
        ]
      }
      rootComponent={
        Object {
          "branch": "develop",
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
        }
      }
    />
    <tr
      className="blank"
    >
      <td
        colSpan={3}
      />
      <td
        colSpan={5}
      />
    </tr>
  </tbody>
</table>
`;
